--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Anirudh Jwala <anirudhsai2@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.9"
