Deployment with vercel

--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "client": "yarn --cwd frontend start",
     "dev": "concurrently \"yarn server\" \"yarn client\"",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "data:destroy": "node backend/seeder -d"
   },
-  "author": "Anirudh Jwala <anirudhsai2@gmail.com>",
+  "author": "Anirudh Jwala",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
